fix bug of button being out of the screen

--- a/src/pages/LandingPage/LandingPage.scss
+++ b/src/pages/LandingPage/LandingPage.scss
@@ -8,6 +8,7 @@
     justify-content: space-evenly;
 
     @include desktop {
+        height: 100vh;
         padding: 2.25rem;
     }
 
